# md-slides

./: .gitignore
atd/: dune  json_models.atd
backend/exe/: dune  md_slides_server.ml
backend/lib/: Config.ml  Config.mli  MResult.ml  SlideFile.ml  SlideFile.mli  dune
backend/models/: Json.ml  Types.ml  dune  json_models.atd  json_models_t.mli
backend/test/: md-slides.toml  runserver.sh  slides.md
frontend/: README.md  bsconfig.json  package-lock.json  package.json
frontend/src/: Api.ml  Api.mli  App.ml  App_type.ml  App_view.re  Component.ml  Model.ml  Slide.re  SlideLoader.ml  SlideLoader_type.ml  SlideLoader_view.re  SlideOverlay.re  Slideshow.re  Util.ml  View.ml  index.html
frontend/src/css/: main.css
src/: .merlin  Makefile  Server.ml  SlideFile.ml
